--- a/static-site-gen.cabal
+++ b/static-site-gen.cabal
@@ -9,7 +9,8 @@ extra-source-files: CHANGELOG.md
 
 library
     exposed-modules:  Html,
-					  Markup
+		      Markup,
+		      Convert
     build-depends:    base >=4.16.4.0
     hs-source-dirs:   src
     default-language: Haskell2010
