--- a/static-site-gen.cabal
+++ b/static-site-gen.cabal
@@ -19,6 +19,7 @@ executable static-site-gen
     main-is:          Main.hs
     build-depends:
         base >=4.16.4.0,
+        directory >= 1.3.7.1,
         static-site-gen
 
     hs-source-dirs:   app
